name:                rna-seq-simulate
version:             0.1
license:             MIT
author:              Roman Cheplyaka
maintainer:          roma@ro-che.info
build-type:          Simple
cabal-version:       >=1.10

executable simulate-rna-seq
  main-is:             simulate.hs
  build-depends:       base, biofasta, biofastq,
                       random-fu, random-source,
                       optparse-applicative
  default-language:    Haskell2010
