name:                rna-seq-simulate
version:             0.1
license:             MIT
author:              Roman Cheplyaka
maintainer:          roma@ro-che.info
build-type:          Simple
cabal-version:       >=1.10

executable rna-seq-simulate
  main-is:             simulate.hs
  build-depends:       base, biofasta, biofastq, biocore,
                       random-fu, random-source,
                       optparse-applicative, bytestring,
                       containers, mtl
  default-language:    Haskell2010
